k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: localhost 
    http:
      paths:
      - backend:
          service:
            name: frontend 
            port:
              number: 8080
        path: /
        pathType: Prefix
